header and hero block is finished

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,11 +109,8 @@ body {
 // Подключение стилей отдельных блоков и секций =======================================================================================================================
 @import 'layout/header';
 @import 'layout/footer';
-// @import 'main/hero';
-
-
-
-
+@import 'main/hero';
+@import 'main/company';
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
