--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -1,2 +1,19 @@
 // Заголовки, общие БЄМ блоки и проче...
 
+.button {
+    width: 183px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.66px;
+
+    @media(max-width: 1024px) {
+        width: 158px;
+        height: 40px;
+    }
+}
