--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,21 +1,95 @@
 // =====================================================================================================================
 .header {
-  min-height: 112px;
+  min-height: 96px;
   display: flex;
   align-items: center;
+  z-index: 2;
 
-  @media (max-width: 520px) {
-    min-height: 75px;
+  @media (max-width: 768px) {
+    min-height: 95px;
+  }
+
+  @media (max-width: 575px) {
+    min-height: 63px;
   }
 
   // .header__container
   &__container {
-    max-width: 1895px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 0 10px 0 45px;
+
+    @media (max-width: 575px) {
+      position: relative;
+    }
+  }
+
+  &__logo {
+    img {
+      width: 53px;
+      height: 12px;
+    }
+  }
+
+  &__left {
+    display: flex;
+    gap: 73px;
+
+    @media (max-width: 1024px) {
+      gap: 100px;
+    }
+
+    @media (max-width: 768px) {
+      gap: 96px;
+    }
+  }
+
+  &__icon-menu-wrapper {
+    display: flex;
+    gap: 24px;
+
+    @media (max-width: 768px) {
+      gap: 22px;
+    }
+
+    @media (max-width: 575px) {
+      position: absolute;
+      right: 14px;
+    }
+
+    p {
+      display: none;
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: 0.66px;
+
+      @media (max-width: 1024px) {
+        display: block;
+      }
+      @media (max-width: 575px) {
+        display: none;
+      }
+    }
+  }
+
+  &__right {
+    display: flex;
+    gap: 56px;
+
+    @media (max-width: 1024px) {
+      gap: 29px;
+    }
+  }
+
+  &__button {
+    border: 1px solid rgba(253, 253, 253, 0.32);
+
+    @media (max-width: 575px) {
+      display: none;
+    }
   }
 }
 
@@ -24,18 +98,14 @@
   align-items: center;
   gap: 45px;
 
-  @media (max-width: 1125px) {
-    flex-direction: column-reverse;
-  }
-
-  @media (max-width: 769px) {
+  @media (max-width: 1024px) {
     opacity: 0;
     position: fixed;
     top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #2f1947;
+    background-color: #000;
     overflow: hidden;
     visibility: hidden;
     pointer-events: none;
@@ -43,6 +113,21 @@
     z-index: 5;
 
     &._active {
+      .menu__item-burger {
+        display: block;
+      }
+      .menu__link {
+        font-size: 32px;
+        opacity: 0.5;
+
+        @media(max-width: 575px) {
+          font-size: 26px;
+        }
+        &.active {
+          opacity: 1;
+        }
+      }
+
       display: flex;
       flex-direction: column;
       overflow: visible;
@@ -54,27 +139,66 @@
     }
   }
 
-  &__list {
+  &__wrapper {
     display: flex;
-    gap: 42px;
-    position: relative;
-    align-items: center;
-    &::after {
-      content: "";
-      position: absolute;
-      border: 1px solid #fff;
-      height: 46px;
-      right: 97px;
+    justify-content: space-between;
+    width: 912px;
+    padding-top: 33px;
+    display: none;
 
-      @media (max-width: 1125px) {
-        display: none;
-      }
+    @media(max-width: 1024px) {
+      display: flex;
     }
 
-    @media (max-width: 769px) {
+    @media(max-width: 938px) {
+      width: 717px;
+      padding-top: 25px;
+    }
+    @media(max-width: 768px) {
+      width: 670px;
+    }
+    @media(max-width: 700px) {
+      width: 490px;
+    }
+    @media(max-width: 575px) {
+      width: 357px;
+      padding-top: 10px;
+    }
+    @media(max-width: 376px) {
+      width: 325px;
+    }
+    @media(max-width: 360px) {
+      width: 276px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    gap: 48px;
+    position: relative;
+    align-items: center;
+
+    @media (max-width: 1024px) {
       flex-direction: column;
       align-items: center;
-      margin-top: 100px;
+      margin-top: 89px;
+      align-items: start;
+      justify-content: start;
+      justify-content: flex-start;
+      width: 100%;
+      padding-left: 210px;
+      gap: 34px;
+    }
+    @media(max-width: 768px) {
+      margin-top: 241px;
+      padding-left: 187px;
+    }
+
+    @media(max-width: 580px) {
+      margin-top: 53px;
+      padding-left: 0;
+      align-items: center;
+      gap: 29px;
     }
   }
 
@@ -89,10 +213,94 @@
     }
   }
 
+  &__item-burger {
+    display: none;
+  }
+
   &__link {
-    font-size: 22px;
+    font-size: 11px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.66px;
+  }
+
+  &__logo {
+    padding-top: 14px;
+  }
+
+  &__bottom {
+    position: absolute;
+    bottom: 41px;
+    left: 0;
+    width: 100%;
+    display: none;
+
+    @media(max-width: 1024px) {
+      display: block;
+    }
+
+    @media(max-width: 768px) {
+      bottom: 31px;
+    }
+    @media(max-width: 376px) {
+      bottom: 20px;
+    }
+  }
+
+  &__content-info {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+
+    @media(max-width: 430px) {
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    a {
+      font-size: 11px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      letter-spacing: 0.66px;
+    }
+  }
+
+  &__content-inner {
+    display: flex;
+    gap: 78px;
+
+    @media(max-width: 768px) {
+      gap: 63px;
+    }
+  }
+
+  &__button-wrapper {
+    display: none;
+    @media(max-width: 575px) {
+      display: block;
+      margin-top: 3px;
+      border: 1px solid white;
+    }
+  }
+
+  &__content-bottom {
+    display: flex;
+    padding-left: 56px;
+    gap: 41px;
+    @media(max-width: 768px) {
+      padding-left: 48px;
+      gap: 31px;
+    }
+    @media(max-width: 376px) {
+      gap: 111px;
+      align-items: center;
+      padding-left: 24px;
+    }
+    @media(max-width: 360px) {
+      gap: 50px;
+    }
   }
 }
 // =====================================================================================================================
@@ -101,13 +309,13 @@
 
 .icon-menu {
   display: none;
-  @include media(769) {
+  @include media(1024) {
     display: block;
     position: relative;
     width: rem(30);
     height: rem(18);
     cursor: pointer;
-    z-index: 5;
+    z-index: 6;
     span,
     &::before,
     &::after {
@@ -120,19 +328,28 @@
       background-color: #fff;
     }
     &::before {
-      width: 31px;
+      width: 27px;
       top: 0;
       border-radius: 10px;
+
+      @media (max-width: 768px) {
+        top: 2px;
+      }
     }
     &::after {
-      bottom: 0;
-      width: 31px;
-      border-radius: 10px;
+      width: 0;
     }
     span {
       top: calc(50% - rem(1));
-      width: 31px;
+      width: 27px;
       border-radius: 10px;
+
+      @media (max-width: 768px) {
+        top: 10px;
+      }
+      @media (max-width: 575px) {
+        top: 9px;
+      }
     }
     &._active {
       span {
@@ -143,6 +360,9 @@
         transform: rotate(-45deg);
       }
       &::after {
+        bottom: 0;
+        width: 27px;
+        border-radius: 10px;
         bottom: calc(50% - rem(1));
         transform: rotate(45deg);
       }
@@ -150,25 +370,27 @@
   }
 }
 
-
-
 .dropdown-toggle {
   display: none;
 }
 
 .dropdown-label {
   display: inline-block;
-  padding: 12px 27px 10px 26px;
+  padding: 17px 27px 10px 26px;
   cursor: pointer;
   position: relative;
-  font-size: 22px;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.66px;
 
-  svg {
-    position: absolute;
-    right: 4px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: transform 0.2s ease;
+  @media (max-width: 1024px) {
+    padding: 15px 27px 16px 26px;
+  }
+
+  @media (max-width: 575px) {
+    padding: 15px 51px 16px 26px;
   }
 }
 
@@ -176,7 +398,7 @@
   display: none;
   list-style: none;
   font-family: Montserrat;
-  width: 84px;
+  width: 71px;
   padding: 0;
   margin: 0;
   position: absolute;
@@ -184,12 +406,16 @@
   z-index: 1;
   text-align: center;
 
-  @media (max-width: 768px) {
-    background: #2f1947;
+  @media (max-width: 1024px) {
+    background: transparent;
   }
 
   a {
-    font-size: 22px;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.66px;
   }
 }
 
