--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,8 +109,10 @@ body {
 // Подключение стилей отдельных блоков и секций =======================================================================================================================
 @import 'layout/header';
 @import 'layout/footer';
+@import 'components/flatCard';
 @import 'main/hero';
 @import 'main/company';
+@import 'main/projects';
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
