fixed bugs with burger menu and projects card and optimization functions dropdown in one function

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -120,7 +120,7 @@
         font-size: 32px;
         opacity: 0.5;
 
-        @media(max-width: 575px) {
+        @media (max-width: 575px) {
           font-size: 26px;
         }
         &.active {
@@ -130,12 +130,21 @@
 
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 41px;
       overflow: visible;
       visibility: visible;
       pointer-events: unset;
       opacity: 1;
       top: 0;
       overflow-y: auto;
+
+      @media(max-width: 769px) {
+        padding-bottom: 32px;
+      }
+      @media(max-width: 376px) {
+        padding-bottom: 20px;
+      }
     }
   }
 
@@ -146,28 +155,28 @@
     padding-top: 33px;
     display: none;
 
-    @media(max-width: 1024px) {
+    @media (max-width: 1024px) {
       display: flex;
     }
 
-    @media(max-width: 938px) {
+    @media (max-width: 938px) {
       width: 717px;
       padding-top: 25px;
     }
-    @media(max-width: 768px) {
+    @media (max-width: 768px) {
       width: 670px;
     }
-    @media(max-width: 700px) {
+    @media (max-width: 700px) {
       width: 490px;
     }
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       width: 357px;
       padding-top: 10px;
     }
-    @media(max-width: 376px) {
+    @media (max-width: 376px) {
       width: 325px;
     }
-    @media(max-width: 360px) {
+    @media (max-width: 360px) {
       width: 276px;
     }
   }
@@ -181,7 +190,6 @@
     @media (max-width: 1024px) {
       flex-direction: column;
       align-items: center;
-      margin-top: 89px;
       align-items: start;
       justify-content: start;
       justify-content: flex-start;
@@ -189,13 +197,11 @@
       padding-left: 210px;
       gap: 34px;
     }
-    @media(max-width: 768px) {
-      margin-top: 241px;
+    @media (max-width: 768px) {
       padding-left: 187px;
     }
 
-    @media(max-width: 580px) {
-      margin-top: 53px;
+    @media (max-width: 580px) {
       padding-left: 0;
       align-items: center;
       gap: 29px;
@@ -230,20 +236,17 @@
   }
 
   &__bottom {
-    position: absolute;
-    bottom: 41px;
-    left: 0;
     width: 100%;
     display: none;
 
-    @media(max-width: 1024px) {
+    @media (max-width: 1024px) {
       display: block;
     }
 
-    @media(max-width: 768px) {
+    @media (max-width: 768px) {
       bottom: 31px;
     }
-    @media(max-width: 376px) {
+    @media (max-width: 376px) {
       bottom: 20px;
     }
   }
@@ -253,7 +256,7 @@
     gap: 40px;
     align-items: center;
 
-    @media(max-width: 430px) {
+    @media (max-width: 430px) {
       flex-direction: column;
       gap: 8px;
     }
@@ -271,17 +274,20 @@
     display: flex;
     gap: 78px;
 
-    @media(max-width: 768px) {
+    @media (max-width: 768px) {
       gap: 63px;
     }
   }
 
   &__button-wrapper {
     display: none;
-    @media(max-width: 575px) {
+    @media (max-width: 575px) {
       display: block;
       margin-top: 3px;
       border: 1px solid white;
+    }
+    @media (max-width: 376px) {
+      margin-top: 21px;
     }
   }
 
@@ -289,16 +295,18 @@
     display: flex;
     padding-left: 56px;
     gap: 41px;
-    @media(max-width: 768px) {
+    padding-top: 28px;
+    @media (max-width: 768px) {
       padding-left: 48px;
+      padding-top: 0;
       gap: 31px;
     }
-    @media(max-width: 376px) {
+    @media (max-width: 376px) {
       gap: 111px;
       align-items: center;
       padding-left: 24px;
     }
-    @media(max-width: 360px) {
+    @media (max-width: 360px) {
       gap: 50px;
     }
   }
