complited adaptive block projects under 768 px

--- a/src/scss/main/hero.scss
+++ b/src/scss/main/hero.scss
@@ -62,6 +62,7 @@
       }
       @media (max-width: 769px) {
         height: 959px;
+        object-fit: unset;
       }
       @media (max-width: 575px) {
         height: 575px;
@@ -80,6 +81,7 @@
       }
       @media (max-width: 769px) {
         height: 959px;
+        object-fit: unset;
       }
       @media (max-width: 575px) {
         height: 575px;
