--- a/src/scss/components/flatCard.scss
+++ b/src/scss/components/flatCard.scss
@@ -7,6 +7,11 @@
     justify-content: space-between;
     max-width: 1048px;
     margin: 0 auto;
+
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   // .flatCard__left
@@ -20,11 +25,18 @@
     max-width: 424px;
     position: relative;
     z-index: 2;
+    @media (max-width: 1024px) {
+      text-align: center;
+      max-width: 363px;
+    }
     h3 {
       font-size: 36px;
       font-style: normal;
       font-weight: 700;
       line-height: 142.4%; /* 51.264px */
+      @media (max-width: 1024px) {
+        font-size: 32px;
+      }
     }
   }
 
@@ -32,6 +44,9 @@
 
   &__right {
     padding-top: 180px;
+    @media (max-width: 1024px) {
+      padding-top: 24px;
+    }
   }
 
   // .flatCard__right-text
@@ -41,6 +56,14 @@
     padding-bottom: 44px;
     position: relative;
     z-index: 2;
+    @media (max-width: 1024px) {
+      text-align: center;
+      max-width: 452px;
+      padding-bottom: 68px;
+    }
+    @media(max-width: 768px) {
+      padding-bottom: 52px;
+    }
     p {
       font-size: 14px;
       font-style: normal;
@@ -55,6 +78,12 @@
     border: 1px solid;
     background: #fff;
     color: #000;
+
+    @media (max-width: 1024px) {
+      margin: 0 auto;
+      width: 185px;
+      height: 41px;
+    }
   }
 
   // .flatCard__wrapper-img
@@ -64,7 +93,9 @@
     position: absolute;
     top: 110px;
     left: 142px;
-
+    @media (max-width: 1024px) {
+      display: none;
+    }
   }
 
   // .flatCard__img
