--- a/src/scss/main/company.scss
+++ b/src/scss/main/company.scss
@@ -1,6 +1,12 @@
 .company {
   // .company__container
   margin-bottom: 140px;
+  @media(max-width: 1024px) {
+    margin-bottom: 124px;
+  }
+  @media(max-width: 768px) {
+    margin-bottom: 227px;
+  }
   @media(max-width: 420px) {
     margin-bottom: 243px;
   }
@@ -88,9 +94,9 @@
   // .company__top-title
 
   &__top-title {
-    padding-bottom: 10px;
+    padding-bottom: 11px;
     @media (max-width: 1060px) {
-      padding-bottom: 5px;
+      padding-bottom: 0;
     }
     @media (max-width: 769px) {
       padding-bottom: 2px;
@@ -120,7 +126,7 @@
   // .company__top-text
 
   &__top-text {
-    max-width: 515px;
+    max-width: 513px;
     padding-bottom: 54px;
     @media (max-width: 1060px) {
       max-width: 442px;
@@ -139,12 +145,15 @@
       font-size: 14px;
       font-style: normal;
       font-weight: 300;
-      line-height: 170.66%;
+      line-height: 163.66%;
       opacity: 0.7;
       padding-top: 15px;
+      letter-spacing: -0.3px;
 
       @media (max-width: 1060px) {
-        padding-top: 10px;
+        padding-top: 14px;
+        letter-spacing: 0;
+        line-height: 168.66%;
       }
       @media (max-width: 769px) {
         padding-top: 12px;
@@ -184,7 +193,7 @@
       font-style: normal;
       font-weight: 700;
       line-height: normal;
-      letter-spacing: 1.2px;
+      letter-spacing: 0.9px;
       text-transform: uppercase;
     }
   }
