finished block projects and finished block works and start block contacts

--- a/src/components/flatCard.html
+++ b/src/components/flatCard.html
@@ -12,10 +12,8 @@
         felis, aliquam eu enim sed, ornare pretium velit.
       </p>
     </div>
-    <a href="#">
-        <div class="flatCard__right-button button">
-            Make request
-        </div>
+    <a href="#" class="flatCard__right-button button">
+        Make request
     </a>
   </div>
   <div class="flatCard__wrapper-img flatCard__img">
