--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -110,9 +110,12 @@ body {
 @import 'layout/header';
 @import 'layout/footer';
 @import 'components/flatCard';
+@import 'components/contacts';
 @import 'main/hero';
 @import 'main/company';
 @import 'main/projects';
+@import 'main/work';
+@import 'main/contact';
 
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
