--- a/src/scss/components/flatCard.scss
+++ b/src/scss/components/flatCard.scss
@@ -12,6 +12,10 @@
       flex-direction: column;
       align-items: center;
     }
+
+    @media(max-width: 376px) {
+      display: block;
+    }
   }
 
   // .flatCard__left
@@ -29,6 +33,10 @@
       text-align: center;
       max-width: 363px;
     }
+    @media (max-width: 376px) {
+      text-align: start;
+      max-width: 298px;
+    }
     h3 {
       font-size: 36px;
       font-style: normal;
@@ -36,6 +44,10 @@
       line-height: 142.4%; /* 51.264px */
       @media (max-width: 1024px) {
         font-size: 32px;
+      }
+      @media (max-width: 376px) {
+        font-size: 26px;
+        line-height: 31.5px;
       }
     }
   }
@@ -46,6 +58,9 @@
     padding-top: 180px;
     @media (max-width: 1024px) {
       padding-top: 24px;
+    }
+    @media (max-width: 376px) {
+      padding-top: 22px;
     }
   }
 
@@ -61,8 +76,12 @@
       max-width: 452px;
       padding-bottom: 68px;
     }
-    @media(max-width: 768px) {
+    @media (max-width: 768px) {
       padding-bottom: 52px;
+    }
+    @media (max-width: 376px) {
+     text-align: start;
+     padding-bottom: 17px;
     }
     p {
       font-size: 14px;
@@ -83,6 +102,9 @@
       margin: 0 auto;
       width: 185px;
       height: 41px;
+    }
+    @media (max-width: 376px) {
+      margin: 0;
     }
   }
 
