finished main pages and almost done header and finished section our 1440px

--- a/src/components/contacts.html
+++ b/src/components/contacts.html
@@ -1,40 +1,79 @@
-<div class="contacts__title">
-  <h3>Drop us a line</h3>
-</div>
-<div class="contacts__text">
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper
-    eu mauris vitae posuere.
-  </p>
-</div>
-<div class="contacts__info-wrapper">
-  <div class="contacts__info-city contacts__city">
-    <h4 class="contacts__city-city">Kyiv</h4>
-    <p class="contacts__city-info">
-      (209) 555-0104 6391 Elgin St. Celina, Delaware 10299
+<div class="contacts__wrapper">
+  <div class="contacts__title">
+    <h3>Drop us a line</h3>
+  </div>
+  <div class="contacts__title-mobile">
+    <h3>Get in touch</h3>
+  </div>
+  <div class="contacts__text">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper
+      eu mauris vitae posuere.
     </p>
   </div>
-  <div class="contacts__info-city contacts__city">
-    <h4 class="contacts__city-city">Lviv</h4>
-    <p class="contacts__city-info">
-      (209) 555-0104 6391 Elgin St. Celina, Delaware 10299
-    </p>
+  <div class="contacts__info-wrapper">
+    <div class="contacts__info-wrap">
+      <div class="contacts__info-city contacts__city">
+        <h4 class="contacts__city-city">Kyiv</h4>
+        <p class="contacts__city-info">
+          (209) 555-0104
+        </p>
+        <p class="contacts__city-info">
+          6391 Elgin St. Celina,
+        </p>
+        <p class="contacts__city-info">
+          Delaware 10299
+        </p>
+      </div>
+      <div class="contacts__info-city contacts__city">
+        <h4 class="contacts__city-city">Lviv</h4>
+        <p class="contacts__city-info">
+          (209) 555-0104 
+        </p>
+        <p class="contacts__city-info">
+          6391 Elgin St. Celina,
+        </p>
+        <p class="contacts__city-info">
+          Delaware 10299
+        </p>
+      </div>
+      <div class="contacts__info-city contacts__city">
+        <h4 class="contacts__city-city">Kharkiv</h4>
+        <p class="contacts__city-info">
+          (209) 555-0104
+        </p>
+        <p class="contacts__city-info">
+          6391 Elgin St. Celina,
+        </p>
+        <p class="contacts__city-info">
+          Delaware 10299
+        </p>
+      </div>
+    </div>
+    <div class="contacts__info-link contacts__link">
+      <a href="#" class="contacts__link-link">
+          info@gmail.com
+      </a>
+      <div class="contacts__link-wrapper">
+          <a href="#" class="contacts__link-wrap">Fb</a>
+          <a href="#" class="contacts__link-wrap">In</a>
+          <a href="#" class="contacts__link-wrap">Be</a>
+      </div>
+    </div>
   </div>
-  <div class="contacts__info-city contacts__city">
-    <h4 class="contacts__city-city">Kharkiv</h4>
-    <p class="contacts__city-info">
-      (209) 555-0104 6391 Elgin St. Celina, Delaware 10299
-    </p>
-  </div>
-  <div class="contacts__info-link contacts__link">
-    <a href="#" class="contacts__link-link">
-        info@gmail.com
-    </a>
-    <div class="contacts__link-wrapper">
-        <a href="#" class="contacts__link-wrap">Fb</a>
-        <a href="#" class="contacts__link-wrap">In</a>
-        <a href="#" class="contacts__link-wrap">Be</a>
+  <div class="contacts__bottom-mobile">
+    <a href="#" class="contacts__button button"> Make request </a>
+    <div class="contacts__bottom-link contacts__link">
+      <a href="#" class="contacts__link-link">
+          info@gmail.com
+      </a>
+      <div class="contacts__link-wrapper">
+          <a href="#" class="contacts__link-wrap">Fb</a>
+          <a href="#" class="contacts__link-wrap">In</a>
+          <a href="#" class="contacts__link-wrap">Be</a>
+      </div>
     </div>
   </div>
 </div>
-<a href="#" class="contacts__button button"> Make request </a>
+
+
