--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -11,6 +11,25 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.66px;
+    color: #fff;
+
+    @media(max-width: 1024px) {
+        width: 158px;
+        height: 40px;
+    }
+}
+.button-black {
+    width: 183px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.66px;
+    color: #000;
 
     @media(max-width: 1024px) {
         width: 158px;
